--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           go-version: 1.21  # Change this to the latest Go version
 
       - name: Verify go.mod and go.sum
-        run: go mod tidy && git diff --exit-code go.mod go.sum
+        run: go mod tidy
 
       - name: Run Static Analysis (Lint)
         uses: golangci/golangci-lint-action@v6
