--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.21  # Change this to the latest Go version
+          go-version: 1.24
+          check-latest: true
 
       - name: Verify go.mod and go.sum
         run: go mod tidy
